// Original file: src/proto/proto/recentNew.proto


export interface QueryRecentNew {
  'id'?: (number);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'createdBy'?: (string);
  'updatedBy'?: (string);
  'state'?: (string);
  'page'?: (number);
  'limit'?: (number);
  'sortBy'?: (string);
  'sortOrder'?: (string);
  'url'?: (string);
  'campaignId'?: (number);
  'profileId'?: (number);
  'fundingRoundId'?: (number);
  'acquisitionId'?: (number);
  'companyId'?: (number);
  'postId'?: (number);
  '_id'?: "id";
  '_createdAt'?: "createdAt";
  '_updatedAt'?: "updatedAt";
  '_createdBy'?: "createdBy";
  '_updatedBy'?: "updatedBy";
  '_state'?: "state";
  '_page'?: "page";
  '_limit'?: "limit";
  '_sortBy'?: "sortBy";
  '_sortOrder'?: "sortOrder";
  '_url'?: "url";
  '_campaignId'?: "campaignId";
  '_profileId'?: "profileId";
  '_fundingRoundId'?: "fundingRoundId";
  '_acquisitionId'?: "acquisitionId";
  '_companyId'?: "companyId";
  '_postId'?: "postId";
}

export interface QueryRecentNew__Output {
  'id'?: (number);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'createdBy'?: (string);
  'updatedBy'?: (string);
  'state'?: (string);
  'page'?: (number);
  'limit'?: (number);
  'sortBy'?: (string);
  'sortOrder'?: (string);
  'url'?: (string);
  'campaignId'?: (number);
  'profileId'?: (number);
  'fundingRoundId'?: (number);
  'acquisitionId'?: (number);
  'companyId'?: (number);
  'postId'?: (number);
  '_id': "id";
  '_createdAt': "createdAt";
  '_updatedAt': "updatedAt";
  '_createdBy': "createdBy";
  '_updatedBy': "updatedBy";
  '_state': "state";
  '_page': "page";
  '_limit': "limit";
  '_sortBy': "sortBy";
  '_sortOrder': "sortOrder";
  '_url': "url";
  '_campaignId': "campaignId";
  '_profileId': "profileId";
  '_fundingRoundId': "fundingRoundId";
  '_acquisitionId': "acquisitionId";
  '_companyId': "companyId";
  '_postId': "postId";
}
